# tensorflow-opicm5

./: Bazel tensorflow.txt  CMakeLists.txt  LICENSE  README.md  main  mnist.cc  tensorflow.ipynb
include/llvm/include/llvm/Config/: TargetMCAs.def
include/llvm/include/llvm/Support/: MathExtras.h
include/tensorflow/core/ir/: attributes.cc.inc  dialect.cc.inc  ops.cc.inc
include/tensorflow/core/ir/types/: attributes.cc.inc  attributes_enum.cc.inc  types.cc.inc
model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
output/: CMakeCache.txt  Makefile  cmake_install.cmake  main
output/model/: keras_metadata.pb
output/model/variables/: variables.index
output/picture/: label.txt
picture/: label.txt
